--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             </ul>
             <button>button</button>
-            <button disabled="disabled"></button>
+            <button disabled="disabled">disabled</button>
             <input type="text">
             <input type="checkbox">
             <input type="date">
